@@ -68,8 +68,7 @@ attlist.affix &= ( attribute name { text } | attribute id { text } )
 attlist.affix &= attribute icon { text }?
 button = element button { attlist.button, empty }
 attlist.button &= attribute help { text }?
-attlist.button &=
-  [ a:defaultValue = "Unknown" ] attribute string { text }?
+attlist.button &= attribute string { text }?
 attlist.button &= attribute confirm { text }?
 attlist.button &= attribute name { text }
 attlist.button &= attribute states { text }?
