@@ -15,7 +15,7 @@ this repository contains the full copyright notices and license terms. -->
     <newline/>
     <label name="out_of_sync"/>
     <field name="out_of_sync"/>
-    <button string="Sync" name="sync" colspan="2"/>
+    <button name="sync" colspan="2"/>
     <group id="values" colspan="2" yexpand="1" yfill="1" col="1">
         <separator name="values"/>
         <field name="values"/>
