@@ -68,6 +68,14 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_create" eval="True"/>
             <field name="perm_delete" eval="True"/>
         </record>
+        <record model="ir.model.button" id="user_reset_password_button">
+            <field name="name">reset_password</field>
+            <field name="string">Reset Password</field>
+            <field name="help">Send by email a new temporary password to the user</field>
+            <field name="model"
+                search="[('model', '=', 'res.user')]"/>
+        </record>
+
         <record model="ir.ui.view" id="user_config_start_view_form">
             <field name="model">res.user.config.start</field>
             <field name="type">form</field>
@@ -153,6 +161,19 @@ this repository contains the full copyright notices and license terms. -->
             <field name="report_name">res.user.email_reset_password</field>
             <field name="report">res/email_reset_password.html</field>
             <field name="template_extension">html</field>
+        </record>
+
+        <record model="ir.model.button" id="user_application_validate_button">
+            <field name="name">validate_</field>
+            <field name="string">Validate</field>
+            <field name="model"
+                search="[('model', '=', 'res.user.application')]"/>
+        </record>
+        <record model="ir.model.button" id="user_application_cancel_button">
+            <field name="name">cancel</field>
+            <field name="string">Cancel</field>
+            <field name="model"
+                search="[('model', '=', 'res.user.application')]"/>
         </record>
     </data>
 </tryton>
